updated the html layout of website

--- a/index.html
+++ b/index.html
@@ -6,31 +6,50 @@
 		<meta name="Author" content="Tien Phan">
 		<meta name="Viewport" content="width=display-width, initial-scale=1.0">
 
+		<link rel="stylesheet" type="text/css" href="css/header/header.css">
+		<link rel="stylesheet" type="text/css" href="css/main/main.css">
+		<link rel="stylesheet" type="text/css" href="css/footer/footer.css">
+
 		<title>Portfolio</title>
 	</head>
 
 	<body>
-		<!-- @TODO main header for website -->
-		
-		<!-- @TODO add a navigation bar that's a one row table that allows the user to navigate through the website -->
-		<!-- possibly want the navigation bar to be at the very top of the page and not distract from the content -->
 		<header>
+			<div class="header">
+				<h1 id="header">Hello, my name is Tien Phan</h1>
+				<a class="link" href="https://github.com/chickbee" target="/blank">Github</a>
+				<p id="greeting">and this is my portfolio website</p>
+			</div>
+
+			<div class="navigation-bar">
+				<p>About Me</p>
+				<p>Projects</p>
+				<p>Resume</p>
+				<p>Contact Me</p>
 		</header>
 
 		<!-- @TODO I want to have a still background and a moving block piece in the center that scrolls one content at a time. 
 			Also would like a button to scroll to the top
-
-		 	@TODO sections
-			1. initial screen I want to be about me
-			2. skills/education
-			3. projects
-			4. *contact me form
 		-->
 		<main>
+			<div class="main-container">
+				<section class="about-me">
+				</section>
+
+				<section class="projects">
+				</section>
+
+				<section class="resume">
+				</section>
+
+				<section class="contact-form">
+				</section>
+			</div>
 		</main>
 
 		<!-- idk what I want to place here haha -->
 		<footer>
+			<p>Created by Tien Phan</p>
 		</footer>
 	</body>
 </html>
