improved template and currently working on welcome page

--- a/index.html
+++ b/index.html
@@ -15,17 +15,26 @@
 
 	<body>
 		<header>
-			<div class="header">
-				<h1 id="header">Hello, my name is Tien Phan</h1>
-				<a class="link" href="https://github.com/chickbee" target="/blank">Github</a>
-				<p id="greeting">and this is my portfolio website</p>
-			</div>
+			<div class="welcome-page">
+				<div class="header">
+					<h1>Tien Phan</h1>
 
-			<div class="navigation-bar">
-				<p>About Me</p>
-				<p>Projects</p>
-				<p>Resume</p>
-				<p>Contact Me</p>
+				</div>
+
+				<div class"main-header">
+					<a class="link" href="https://github.com/chickbee" target="/blank">Github</a>
+					<p id="greeting">and this is my portfolio website</p>
+				</div>
+
+				<div class="navigation-bar">
+					<ul>
+						<li>About Me</li>
+						<li>Projects</li>
+						<li>Resume</li>
+						<li>Contact Me</li>
+					</ul>
+				</div>
+			</div>
 		</header>
 
 		<!-- @TODO I want to have a still background and a moving block piece in the center that scrolls one content at a time. 
