added font-family for header and html file

--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
 		<meta name="Description" content="This is Tien Phan's Personal Website">
 		<meta name="Author" content="Tien Phan">
 		<meta name="Viewport" content="width=display-width, initial-scale=1.0">
+		
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=ABeeZee&family=Ubuntu:wght@300&display=swap" rel="stylesheet">
+
 
 		<link rel="stylesheet" type="text/css" href="css/html.css">
 		<link rel="stylesheet" type="text/css" href="css/header/header.css">
