added target for github link that goes to new tab

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 							<!-- @TODO add images to content -->
 							<li>321-945-8761</li>
 							<li>Tienphan1019@gmail.com</li>
-							<li><a href="https://github.com/chickbee">Github</a></li>
+							<li><a href="https://github.com/chickbee" target="/blank">Github</a></li>
 							<li>Resume</li>
 						</ul>
 					</div>
