added header with definitions for color for html page

--- a/index.html
+++ b/index.html
@@ -22,8 +22,11 @@
 	<body>
 		<div class="webpage">
 			<header>
-				<h1>Tien Phan</h1>
+				<div id="title-header">
+					<h1>Tien Phan</h1>
+				</div>
 			</header>
+			
 
 			<main>
 				<div class="welcome-area">
