added profile picture and about me

--- a/index.html
+++ b/index.html
@@ -31,12 +31,17 @@
 			<main>
 				<div class="welcome-area">
 					<div class="about-me">
-						<h2>About Me</h2>
-						<!-- add image for profile pic -->
-						<p>about me stuff</p>
+						<div id="profile-pic">
+							<img src="images/chick_bee.jpg" id="my-picture"/> 
+						</div>
+
+						<div id="about-info">
+							<h2>About Me</h2>
+							<p>I am a Computer Science Student that is aspiring to break into the tech industry.  Technology to me is the most amazing thing in the world because just thinking back when I was born in the 90s it has advanced to a level that is incomprehensible.  In today's time it's cool to see how our handheld devices are more powerful than desktop computers just a couple of decades ago.  Technology is like space where the amount of things to learn is vast, but exciting.  I'd like to introduce myself again.  Hi my name is Tien, and I love using and learning about technology.</p>
+						</div>
 					</div>
 
-					<div>
+					<div class="my-links">
 						<h3>Links</h3>
 						<ul>
 							<!-- @TODO add images to content -->
