completed welcome area

--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
 						<h3>Links</h3>
 						<ul>
 							<!-- @TODO add images to content -->
-							<li>321-945-8761</li>
-							<li>Tienphan1019@gmail.com</li>
-							<li><a href="https://github.com/chickbee" target="/blank">Github</a></li>
-							<li>Resume</li>
+							<li>Cell: <a href="tel:321-934-8761">321-945-8761</a></li>
+							<li>Email: <a href="mailto: tienphan1019@gmail.com">Tienphan1019@gmail.com</a></li>
+							<li>Github: <a href="https://github.com/chickbee" target="/blank">Github.com/chickbee</a></li>
+							<li>Resume: <a href="resources/Tien_Phan_Resume.pdf" target="/blank">My Resume</a></li>
 						</ul>
 					</div>
-				</div>
+				</div><hr/>
 
 				<div class="projects">
 					<h2>Projects</h2>
