--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 		<link rel="stylesheet" type="text/css" href="css/html.css">
 		<link rel="stylesheet" type="text/css" href="css/header/header.css">
 		<link rel="stylesheet" type="text/css" href="css/main/main.css">
+		<link rel="stylesheet" type="text/css" href="css/main/projects.css">
+		<link rel="stylesheet" type="text/css" href="css/main/resume.css">
+
 		<link rel="stylesheet" type="text/css" href="css/footer/footer.css">
 
 		<title>Portfolio</title>
@@ -52,22 +55,37 @@
 						</ul>
 					</div>
 				</div><hr/>
-
+				<!-- add later when I actually do projects 
 				<div class="projects">
 					<h2>Projects</h2>
 				</div>
-
+				-->
 				<div class="Resume">
 					<div class="skills">
 						<h3>Skills</h3>
+						<ul>
+							<li>Python</li>
+							<li>C#</li>
+							<li>Java</li>
+							<li>C++</li>
+							<li>HTML</li>
+							<li>CSS</li>
+							<li>Javascript</li>
+							<li>MySqL</li>
+							<li>Github</li>
+						</ul>
+
 					</div>
 
 					<div class="Education">
 						<h3>Education</h3>
+						<p><b>Florida Polytechnic University</b></p>
+						<p>B.S. in Computer Science expected date Fall 2022</p>
 					</div>
 
 					<div class="Work History">
 						<h3>Work History</h3>
+						<p>Licensed Nail Technician @ Sassi Nails 07/2012 - 05/2022</p>
 					</div>
 				</div>
 
