finished a simple webpage

--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
 		<link rel="stylesheet" type="text/css" href="css/main/main.css">
 		<link rel="stylesheet" type="text/css" href="css/main/projects.css">
 		<link rel="stylesheet" type="text/css" href="css/main/resume.css">
-
 		<link rel="stylesheet" type="text/css" href="css/footer/footer.css">
 
 		<title>Portfolio</title>
@@ -87,33 +86,13 @@
 						<h3>Work History</h3>
 						<p>Licensed Nail Technician @ Sassi Nails 07/2012 - 05/2022</p>
 					</div>
-				</div>
-
-				<div class="contact-form">
-					<h2>Contact Me</h2>
-
-					<form>
-						<a name="contact"></a>
-
-						<label>Name</label>
-						<input class="input-field" type="text" name="name">
-
-						<label>Subject</label>
-						<input class="input-field" type="text" name="subject">
-
-						<label>Email</label>
-						<input class="input-field" type="text" name="email">
-
-						<label>Message</label>
-						<input class="input-field" type="text" name="message">
-
-						<input id="submit-button" type="submit" value="send">	
-					</form>
-				</div>
+				</div><hr/>
 		</div>
 
 		<footer>
-			<p>Created by Tien Phan</p>
+			<div id="end-footer">
+				<p>Created by Tien Phan</p>
+			</div>
 		</footer>
 	</body>
 </html>
